mcp-ollama/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mcp-ollama-svc
spec:
  selector:
    app.kubernetes.io/name: ollama
    app.kubernetes.io/part-of: mcp-ollama
  ports:
    - protocol: TCP
      port: 11434
